<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ambry Password</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="prompt_login">Login</string>
    <string name="promp_password">Пароль</string>
    <string name="title_activity_conf_">Смена пароля на вход в ПО</string>
    <string name="checkPassword">Запрашивать пароль при входе</string>
    <string name="enterPassword">Введите пароль</string>
    <string name="repeatPassw">Повторить пароль</string>
    <string name="savePassw">Сохранить</string>
    <string name="password">Пароль</string>
    <string name="login">Логин</string>
    <string name="find">Поиск</string>
    <string name="comment">Комментарий</string>
    <string name="hashSaved">Хеш-пароль сохранен</string>
    <string name="errorSaved">Ошибка сохранения</string>
    <string name="entrance">Вход</string>
    <string name="error_pass_is_not_equal">Пароли не совпадают!</string>
    <string name="error_passw_is_short">Длина пароля меньше 8 знаков!</string>
    <string name="styledLogin"><b>Логин</b></string>
    <string name="change_password">Изменить пароль</string>
    <string name="exit">Выход</string>

    <string-array name="menuItems">
        <item>Настройки</item>
        <item>Выход</item>
    </string-array>

    <string name="menu">Меню</string>
    <string name="back">Назад</string>
    <string name="search">Найти</string>
    <string name="search_by_login">по логину</string>
    <string name="search_by_comment">по комментарию</string>
    <string name="title_fragment_search">Поиск</string>
    <string name="cancel">Отмена</string>
    <string name="add_item_title">Добавить запись</string>
    <string name="error_old_passwIsNotValid">Старый пароль введен не верно!</string>
    <string name="first_create_password">Это первый запуск программы.</string>
    <string name="old_password">Старый пароль</string>
    <string name="new_password">Новый пароль</string>
    <string name="confirm_new_password">Подтвердить пароль</string>
    <string name="item_added">Запись добавлена!</string>
    <string name="question">Секретный вопрос</string>
    <string name="answer">Ответ</string>
    <string name="ok">OK</string>
    <string name="title_chng_secur_qstn">Изменение секретного вопроса и ответа</string>
    <string name="change_secur_question">Изменить секретный вопрос</string>
    <string name="use_security_question">Использовать секретный вопрос для восстановления пароля</string>
    <string name="title_new_secur_qstn">Ввод секретного вопроса</string>
    <string name="del_item">Удалить запись</string>
    <string name="remind_passwd">Изменить пароль</string>
    <string name="title_remind_passwd">Изменение пароля</string>
    <string name="paswd_chngd">Пароль изменен! Выход..</string>
    <string name="wrong_answer">Ответ неверный!</string>

</resources>