<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="left|top"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/errorText_conf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#AE0606" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_create_password"
            android:textSize="21sp" />

        <EditText
            android:id="@+id/passw1_cr_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enterPassword"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/passw2_cr_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/repeatPassw"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/save_button_cr_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/savePassw" />

            <Button
                android:id="@+id/cancel_button_cr_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>