<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/error_mess_sec"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/secur_qstn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="50"
        android:hint="@string/question" />

    <EditText
        android:id="@+id/secur_answr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="50"
        android:hint="@string/answer" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" 
        >

        <Button
            android:id="@+id/button_ok_secur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ok" />

        <Button
            android:id="@+id/button_cancel_secur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>